[package]
name = "hola_mundo"
version = "0.1.0"
authors = ["Amanda Iniesta Sepúlveda <amanda.iniesta.sepulveda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "3"
dotenv = "0.15.0"
uuid = {version="0.8",features=["serde","v4"]}
chrono = {version="0.4",features=["serde"]}
serde_json = "1.0"
serde = "1.0"